--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/btnAddTask"
         style="@style/ButtonAddTask"
-        android:text="Adicionar Tarefa"
+        android:text="@string/add_task"
         android:drawableEnd="@drawable/ic_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
