--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,12 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Base.Theme.LISTADEPROYECTO" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-        <item name="colorPrimary">#F4E135</item>
-        <item name="colorPrimaryDark">#CD3C6E</item>
-        <item name="android:background">#8BC34A</item>
-
-
+        <item name="colorPrimary">#FF5722</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="android:background">#6B6A6A</item>
     </style>
+
 </resources>
